# py_qt5sip

./: CMakeLists.txt  README.md
cmake/: PackageConfig.cmake.in  pypi_process.py  util.cmake
